# sim-desk

./: .gitignore  README.md  pyproject.toml  render.py  server.py  world.py
web/: index.html
