[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-desk"
version = "0.1.0"
description = "sim-desk —— ANIMA 的一个独立『世界』:虚拟桌面 + 笔,通过 HTTP 世界接口被观测和操作"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pillow>=10",
    "pydantic>=2.6",
]

[tool.setuptools]
py-modules = ["server", "world", "render"]
